--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>Star Rating Form</title>
+    <title>PEX Rating Form</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
